# kumochan

./: LICENSE  pyproject.toml
kumochan/: kumochan.py
kumochan/core/: consts.py
kumochan/core/kumo/: __init__.py  htmlkumo.py  kumo.py
kumochan/core/query/: query.py
test/: test_kumochan.py
