[tool.poetry]
name = "kumochan"
version = "0.0.1"
description = "data scraping made simple. add sumoke datascraping in your application"
authors = ["Honda a <arash.b7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
pytest = "^6.2.5"
pre-commit = "^2.15.0"
isort = "^5.9.3"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
